# WuAlg

./: .gitignore  MensajeToCommit  Partialresult  README.md  ejemplo.txt  hskl.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-10.8/8.2.2/flag-cache/: Cabal-2.0.1.1-ARIl7MGNKZFBAH1HVzpC6s  ghc-paths-0.1.0.9-jtXMj34IrEDKFvgWnrf0G  haskeline-0.7.4.2-FveYnsO43HLJrxPSFExTsX  intero-0.1.28  mtl-2.2.2-8XubxMJDT8QLsstvlNotkc  network-2.6.3.4-D6yy3exF2RyArU0wk1GgIu  random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  stm-2.4.5.0-15FdumhhnVEKazIoQZDzp1  syb-0.7-3Lq8MQxmYP07qktjI1jxu0
.stack-work/install/x86_64-linux/lts-9.9/8.0.2/flag-cache/: Cabal-1.24.2.0-60dLW3781YtJbanDzRmIAz  ListLike-4.5.1-FgIuE8aU3JJ28Dn5gsBU1t  MonadRandom-0.4.2.3-1Oyofi0f0ZeKTN45lq8kTp  QuickCheck-2.9.2-5p0BKQ9fHnW7XhAoxQIvME  ReadArgs-1.2.3-oWUqlRUWBHEvMWh85Qefx  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  adjunctions-4.3-DEvVH0LmqXD1X0J4AkdAs7  algebra-4.3-AGfuc4M8Ofz9NhCS8mUPzK  algebraic-prelude-0.1.0.1-4XhSKr8IE6l3FVz3UdVtB9  arithmoi-0.4.3.0-6gX8EEQS0oGDca0MsVh22o  base-compat-0.9.3-KeJp8zYMpcS9WibvTcxU22  (+85 more)
src/: Main.hs  MainBackup.hs
src/Ejemplos/: Astrofisica.hs  AstrofisicaSym.hs  BisectorSurface.hs  Conicas.hs  GeneralizedSurface.hs  GeneralizedSurfaceNum.hs  Spheres.hs  Strofoid.hs
src/MT/TLibrary/: TMon.hs  TPolyClass.hs  TPolyCompare.hs  TPolyShow.hs  TWu.hs
src/MT/TSymbolic/: TExpr.hs  TWu.hs
src/Simbolic/: Expr.hs  Mon.hs  PolyClass.hs  PolyCompare.hs  Wu.hs
src/Symbolic/: Expr.hs  Mon.hs  PolyClass.hs  PolyCompare.hs  Sym.hs  Wu.hs
src/Test/: TestCases.hs
src/Util/: Coeff.hs
(+1670 files in other folders)
